# stuff

./: README.md  dell5520.md  eigen.md  git.md  links.md  odrive.py  other.md  packaging.md  python.md  ros.md  ros2.md  style_guide_cpp.md  sublime.md  thinkpad.md  tools.md  ubuntu.md  upstart.md  usb.md  wireless.md
arduino/Arm3/: Arm3.pde  Arm3Controller.py
arduino/Biped5IK/: Biped5IK.pde  gaits.h  nuke.cpp  nuke.h
arduino/Dexter/: Dexter.pde  gaits.h  nuke.cpp  nuke.h
arduino/Issy2/: Issy2.pde  gaits.h  nuke.cpp  nuke.h
arduino/Issy3/: Issy3.pde  gaits.h  nuke.cpp  nuke.h
arduino/Issy3FootTest/: Issy3FootTest.pde
arduino/IssyTerrain/: IssyTerrain.pde  gaits.h  nuke.cpp  nuke.h  terrain.h  terrain2.h
arduino/Pons/: Pons.pde
arduino/QuadTR/: QuadTR.pde
arduino/SMALdog/: SMALdog.ino  gaits.h  nuke.cpp  nuke.h  poses.h  smaldog.ppr
arduino/gmr/: gmr.pde  (+4 more)
botfarm/: README.md  botfarm.yml  desktop.yml  inventory
opengl/: CMakeLists.txt  README.md
opengl/Chapter1.2/: BulletOpenGLApplication.cpp  BulletOpenGLApplication.h  CMakeLists.txt  FreeGLUTCallbacks.h  main.cpp
opengl/Chapter2.1/: BulletOpenGLApplication.cpp  BulletOpenGLApplication.h  CMakeLists.txt  FreeGLUTCallbacks.h
opengl/Chapter2.2/: BulletOpenGLApplication.cpp  BulletOpenGLApplication.h  CMakeLists.txt
opengl/Chapter2.3/: BulletOpenGLApplication.cpp  BulletOpenGLApplication.h  CMakeLists.txt
packaging/: README.md  bloom.md  ceres-solver.md
radio/: rtl-sdr.md
robots/: bullet.md  collada.md  eigen.md  geometry.md  planning.md  ros_on_mac.md  wifi_mapping.md
vyos/: openvpn.md
(+49 files in other folders)
